Made navbar as small as possible with the current logo, added auto margins to recipes for better spacing, fixed the sidebar button scrolling and not staying fixed

--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -19,10 +19,10 @@ body {
 /*logo image*/
 .Navbar .left {
     flex: 50%; 
-    max-height: 100px;
+    height: 50px;
     padding-left: 20px;
     align-content: center;
-    padding-top: 10px;
+    padding-top: 0px;
 }
 
 /*text links*/
