--- a/client/src/Components/SidebarButton.css
+++ b/client/src/Components/SidebarButton.css
@@ -7,6 +7,9 @@
     outline: none;
     transition: all .2s cubic-bezier(0, 1.26, .8, 1.28);
     padding-left: 20px;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+
   }
    
 
