--- a/client/src/Components/recipe.module.css
+++ b/client/src/Components/recipe.module.css
@@ -1,7 +1,7 @@
 .recipe{
     border-radius: 10px;
     box-shadow: 0px 5px 20px gray;
-    margin: 20px;
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -9,4 +9,6 @@
     align-items: center;
     min-width: 30%;
     max-width: 30%;
+    min-height: 10%;
+    max-height: 20%;
 }
